@@ -131,6 +131,9 @@ Start/Stop Earthworm Docker Sandbox Containers:
                      You can optionally run command passed by CMD variable.
     ew_run_screen:   run interactive screen shell in a new docker container.
                      You can optionally run command passed by CMD variable.
+    ew_run_detached: run a new docker container in detached mode.
+                     You can optionally run command passed by CMD variable.
+                     If no command is passed, the container remains active until it is stopped.
 
     ew_startstop_bash:     run 'startstop' in an interactive bash shell
                            in a new docker container for current EW_ENV.
@@ -150,6 +153,8 @@ Start/Stop Earthworm Docker Sandbox Containers:
               make EW_ENV=ew_test1 ew_run_bash CMD="df -h"
               make EW_ENV=ew_test1 ew_run_screen
               make EW_ENV=ew_test1 ew_run_screen CMD="df -h"
+              make EW_ENV=ew_test1 ew_run_detached
+              make EW_ENV=ew_test1 ew_run_detached CMD="startstop"
 
               make EW_ENV=ew_test1 ew_startstop_bash
               make EW_ENV=ew_test1 ew_startstop_screen
